--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -50,6 +50,11 @@
         h1 W007!
         p.lead Everything seems to be in good working order.
 
+    noscript
+      .alert.alert-danger
+        strong Uh oh!
+        p It seems you have disabled JavaScript. Why would you do such a thing?
+
     script
       var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
         (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
