--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -17,7 +17,7 @@
     link(rel='apple-touch-icon-precomposed', sizes='72x72', href='img/app/apple-touch-icon-72x72-precomposed.png')
     link(rel='apple-touch-icon-precomposed', href='img/app/apple-touch-icon-precomposed.png')
 
-    link(rel='stylesheet', href='vendor/css/bootstrap/bootstrap.min.css')
+    link(rel='stylesheet', href='vendor/css/bootstrap.min.css')
     link(rel='stylesheet', href='css/app.css')
 
     script(src='vendor/js/modernizr.js')
@@ -28,27 +28,27 @@
     |   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     | <![endif]-->
     
-    .navbar.navbar-inverse.navbar-fixed-top
+    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       .container
-          .navbar-header
-            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand(href='#') BoilerPlus
-          .collapse.navbar-collapse
-            ul.nav.navbar-nav
-              li.active
-                a(href='#') Link 1
-              li
-                a(href='#') Link2
-              li
-                a(href='#') Link3
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') BoilerPlus
 
-    .container
-      .starter-template
-        h1 W007!
-        p.lead Everything seems to be in good working order.
+        .collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Link 1
+            li
+              a(href='#') Link2
+            li
+              a(href='#') Link3
+
+    #Main.container(role='main')
+      h1 W007!
+      p.lead Everything seems to be in good working order.
 
     noscript
       .alert.alert-danger
