--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -1,8 +1,8 @@
 !!! 5
-| <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-| <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-| <!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
-| <!--[if gt IE 8]> <html class="no-js"> <![endif]-->
+| <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en""> <![endif]-->
+| <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+| <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
+| <!--[if gt IE 8]> <!--> <html class="no-js" lang="en"> <![endif]-->
 head
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
@@ -10,45 +10,34 @@ head
   meta(name='viewport', content='width=device-width')
 
   link(rel='author', href='humans.txt', type='text/plain')
-  //- because I hate having images sit in the root.
   link(rel='shortcut icon', href='img/app/favicon.ico')
   link(rel='apple-touch-icon-precomposed', sizes='144x144', href='img/app/apple-touch-icon-144x144-precomposed.png')
   link(rel='apple-touch-icon-precomposed', sizes='114x114', href='img/app/apple-touch-icon-114x114-precomposed.png')
   link(rel='apple-touch-icon-precomposed', sizes='72x72', href='img/app/apple-touch-icon-72x72-precomposed.png')
   link(rel='apple-touch-icon-precomposed', href='img/app/apple-touch-icon-precomposed.png')
 
-  link(rel='stylesheet', href='vendor/css/bootstrap.min.css')
   link(rel='stylesheet', href='css/app.css')
+  link(rel='stylesheet', href='vendor/css/bootstrap.min.css')
+  link(rel='stylesheet', href='vendor/css/font-awesome.min.css')
 
   script(src='vendor/js/modernizr.js')
 
   title BoilerPlus
-body(class="hasNavBar")
+body
   | <!--[if lt IE 7]>
   |   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   | <![endif]-->
   
-  nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+  nav#Nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
     .container
       .navbar-header
         button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='#') BoilerPlus
-
-      .collapse.navbar-collapse
-        ul.nav.navbar-nav
-          li.active
-            a(href='#') Link 1
-          li
-            a(href='#') Link2
-          li
-            a(href='#') Link3
+        a.navbar-brand(href='#', title='BoilerPlus') BoilerPlus
 
   #Main.container(role='main')
-    h1 W007!
-    p.lead Everything seems to be in good working order.
 
   noscript
     .alert.alert-danger
@@ -61,4 +50,4 @@ body(class="hasNavBar")
       g.src='//www.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
 
-  script(src='js/require-config.js', data-main='app.js')
+  script(src='vendor/js/requirejs.js', data-main='js/bootstrap.js')
