--- a/source/less/main/app.less
+++ b/source/less/main/app.less
@@ -1,3 +1,10 @@
-.hasNavBar {
-  padding-top: 60px;
+body {
+  padding: 60px;
+}
+
+// Media queries
+@media (max-width: 979px) {
+  body { 
+    padding-top: 0;
+  } 
 }
