--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -36,6 +36,12 @@ body
           span.icon-bar
           span.icon-bar
         a.navbar-brand(href='#', title='BoilerPlus') BoilerPlus
+      .collapse.navbar-collapse.bs-navbar-collapse
+        ul.nav.navbar-nav
+          li#test1
+            a(href='#test1', title='BoilerPlus / Test 1') Test 1
+          li#test2
+            a(href='#test2', title='BoilerPlus / Test 2') Test 2
 
   #Main.container(role='main')
 
