--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -56,4 +56,4 @@ body
       g.src='//www.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
 
-  script(src='vendor/js/requirejs.js', data-main='js/bootstrap.js')
+  script(src='vendor/js/requirejs.js', data-main='js/require-config.js')
