--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -27,7 +27,7 @@ body
   | <!--[if lt IE 7]>
   |   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   | <![endif]-->
-  
+
   nav#Nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
     .container
       .navbar-header
@@ -41,7 +41,7 @@ body
           li#test1
             a(href='#test1', title='BoilerPlus / Test 1') Test 1
           li#test2
-            a(href='#test2', title='BoilerPlus / Test 2') Test 2
+            a(href='#test2/ImANamedParameter', title='BoilerPlus / Test 2') Test 2
 
   #Main.container(role='main')
 
