Fixes active nav handling. Updates links to be compatible with director. Updates README.

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -39,9 +39,9 @@ body
       .collapse.navbar-collapse.bs-navbar-collapse
         ul.nav.navbar-nav
           li#test1
-            a(href='#test1', title='BoilerPlus / Test 1') Test 1
+            a(href='#/test1', title='BoilerPlus / Test 1') Test 1
           li#test2
-            a(href='#test2/ImANamedParameter', title='BoilerPlus / Test 2') Test 2
+            a(href='#/test2/ImANamedParameter', title='BoilerPlus / Test 2') Test 2
 
   #Main.container(role='main')
 
